Definition of wrbuf_diags moved to querytowrbuf.h. Function wrbuf_put_zquery
removed, because function yaz_query_to_wrbuf does the same.

API changes to ZOOM. Functions for setting options returns int, rather
than void, so we have a way to flag unknown options. ZOOM_resultset_sort1
has become "the" ZOOM_resultset_sort. (and old ZOOM_resultset_sort is removed).
ZOOM_connection_scan1 removed. The generic scan is ZOOM_connection_scan
and the ZOOM_connection_scan_pqf is a handy short-hand taking a PQF string
as argument.

API changes to WRBUF. wrbuf_free removed; replaced by wrbuf_destroy. And
wrbuf_puts no longer appends '\0'. Use wrbuf_cstr to get C-string out.

Deprecated functions for yaz_marc-removed. 

Changed prototype of yaz_marc_decode_buf: const char for result and size_t
for rsize.

Branch split: YAZ_2_1_55_branch

--- 2.1.54 2007/03/16

Fix to ZOOM-C so that transparent reconnection is properly handled on
connections that are in asynchronous mode.

Fixed compilation on OpenBSD 4.0.

Large strings in GRS-1 records are now properly displayed in yaz-client.

Added character conversion support for "advancegreek"; based on patch from
Giannis Kosmas.

Fixed yaz_iconv to return YAZ_ICONV_EINVAL if an incomplete MARC-8 combo
sequence is met. Before the error was not set so it would be unknown.

Adjust yaz-marcdump MARC reader so that it skips until record separator
is read

--- 2.1.52 2007/03/07

ZOOM-C: Removed hardcoded limit of 1024 sockets in ZOOM_event_sys_poll().
Note that ZOOM_event_sys_select() still has the limit due to the fixed-size
fd_set structure used as a bitmask for the FDs to be selected on.

Using ACX_PTHREAD macro to check for POSIX threads.

Fixed have-vsnprintf check.

--- 2.1.50 2007/02/23
 
Fixes for configure on BSD. Bug #900.

Added snprintf/vsnprintf wrappers for systems that don't have 
limits (heavens forbid).

Fixed bug in ZOOM-C's event and task handling. If a ZOOM task was